# fr-dgtl-vuejs-fastapi-template

./: README.md  requirements.txt
.github/: backend_template.yaml  frontend_template.yaml
.github/workflows/: backend_template.yaml  frontend_template.yaml
backend/: cookiecutter.json
backend/hooks/: post_gen_project.py
backend/{{cookiecutter.project_slug}}/: .env  .env.exemple  .gitignore  Dockerfile.prod  README.md  docker-compose.yml  main.tf  pyproject.toml
backend/{{cookiecutter.project_slug}}/.cloudbuild/: cloudbuild.yaml
backend/{{cookiecutter.project_slug}}/.github/workflows/: lint.yaml
backend/{{cookiecutter.project_slug}}/app/: main.py  middleware.py
backend/{{cookiecutter.project_slug}}/app/api/: deps.py  router.py
backend/{{cookiecutter.project_slug}}/app/api/endpoints/: firestore_user.py  user.py
backend/{{cookiecutter.project_slug}}/app/core/: cloud_logging.py  config.py
backend/{{cookiecutter.project_slug}}/app/crud/: __init__.py  base.py  firestore.py
backend/{{cookiecutter.project_slug}}/app/db/: engine.py
backend/{{cookiecutter.project_slug}}/app/firestore/crud/: __init__.py  firestore.py
backend/{{cookiecutter.project_slug}}/app/firestore/endpoints/: firestore_user.py
backend/{{cookiecutter.project_slug}}/app/firestore/models/: base.py
backend/{{cookiecutter.project_slug}}/app/models/: base.py  user.py
backend/{{cookiecutter.project_slug}}/app/sqlmodel/: db.py
backend/{{cookiecutter.project_slug}}/app/sqlmodel/api/: deps.py
backend/{{cookiecutter.project_slug}}/app/sqlmodel/api/endpoints/: todo.py  user.py
backend/{{cookiecutter.project_slug}}/app/sqlmodel/crud/: base.py  todo.py
backend/{{cookiecutter.project_slug}}/app/sqlmodel/models/: base.py  todo.py  user.py
backend/{{cookiecutter.project_slug}}/hooks_modules/: main.py
backend/{{cookiecutter.project_slug}}/tests/: conftest.py
backend/{{cookiecutter.project_slug}}/tests/api/: test_query_filter.py  test_todo.py  test_user.py
backend/{{cookiecutter.project_slug}}/tests/utils/: query_filter.py  user.py
frontend/: cookiecutter.json
frontend/hooks/: post_gen_project.py
frontend/{{cookiecutter.project_slug}}/: .env  .env.exemple  .gitignore  README.md  main.tf  package-lock.json  package.json  tsconfig.app.json  (+1 more)
(+46 files in other folders)
